# library-drf

./: .gitignore  .pre-commit-config.yaml  Procfile  manage.py  package.json  pyproject.toml  setup.cfg
apps/apis/: routes.py  serializers.py  views.py
apps/apis/management/tests/: test_api_book.py
apps/base/: models.py
apps/base/management/commands/: makemigrations.py  seed_database.py
apps/base/management/tests/: test_makemigrations.py  test_seed_database.py
apps/books/: admin.py  factories.py  models.py  views.py
apps/books/management/tests/: test_books.py
apps/books/migrations/: 0001_model_book_create.py  max_migration.txt
apps/books/templates/books/: book_list.html
core/: asgi.py  db.sqlite3  urls.py  wsgi.py
core/settings/: base.py  development.py
core/staticfiles/: staticfiles.json
core/staticfiles/admin/css/: base.1f418065fc2c.css  forms.332ab41432e2.css  forms.css  responsive.css  widgets.694d845b2cb1.css
core/staticfiles/admin/js/: SelectFilter2.js  actions.js  calendar.f8a5d055eb33.js  collapse.js  core.js  inlines.js  jquery.init.js  nav_sidebar.js  popup_response.c6cc78ea5551.js  prepopulate.bd2361dfd64d.js  urlify.25cc3eac8123.js
core/staticfiles/debug_toolbar/css/: toolbar.0be6a2368f99.css
core/staticfiles/debug_toolbar/js/: history.js  timer.112aa1f21d55.js  toolbar.js  utils.4da04711f04f.js
core/staticfiles/rest_framework/css/: bootstrap.min.77017a69879a.css
core/staticfiles/rest_framework/js/: ajax-form.0ea6e6052ab5.js  bootstrap.min.js  coreapi-0.1.1.e580e3854595.js  default.js  (+4 more)
example/settings/: base.py  development.py
(+5 files in other folders)
