[tool.poetry]
name = "example"
version = "0.1.0"
description = "Ejemplo desarrollado para poder en practica la lectura de Django for APIs 4, escrito por William S. Vincent"
authors = ["Maynor Pineda <mpineda@mediainteractiva.net>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
djangorestframework = "^3.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
